[gd_scene load_steps=42 format=2]

[ext_resource path="res://Fire/Fire.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shield/Shield.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fire/FireMeter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Light/light.png" type="Texture" id=4]
[ext_resource path="res://pixel1x1.png" type="Texture" id=5]
[ext_resource path="res://Game/game.gd" type="Script" id=6]
[ext_resource path="res://Indicator/Target.png" type="Texture" id=7]
[ext_resource path="res://Intro/Intro.tscn" type="PackedScene" id=8]
[ext_resource path="res://Snowman/Snowman.tscn" type="PackedScene" id=9]
[ext_resource path="res://WaveSystem/wave_system.gd" type="Script" id=10]
[ext_resource path="res://Font/MotorolaScreentype.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Coins/coin_icon.png" type="Texture" id=12]
[ext_resource path="res://Shop/Shop.tscn" type="PackedScene" id=13]
[ext_resource path="res://Mouse/RightClick.png" type="Texture" id=14]
[ext_resource path="res://Mouse/LeftClick.png" type="Texture" id=15]
[ext_resource path="res://Game/tutorial.gd" type="Script" id=16]
[ext_resource path="res://Settings/GearIcon.png" type="Texture" id=17]
[ext_resource path="res://Settings/GearIconSelected.png" type="Texture" id=18]
[ext_resource path="res://Settings/SettingsFrame.png" type="Texture" id=19]
[ext_resource path="res://Settings/settings_theme.tres" type="Theme" id=20]
[ext_resource path="res://Settings/settings.gd" type="Script" id=22]
[ext_resource path="res://Settings/Close.png" type="Texture" id=23]
[ext_resource path="res://empty_button.tres" type="Theme" id=24]
[ext_resource path="res://Shop/Keybindings.png" type="Texture" id=25]
[ext_resource path="res://Indicator/snow_flake.png" type="Texture" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 540.5 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 858, 229.5 )

[sub_resource type="DynamicFont" id=6]
size = 128
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WaveText:custom_colors/default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.247059, 0.145098, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WaveText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "show_wave"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("WaveText:custom_colors/default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.247059, 0.145098, 0.12549, 0 ), Color( 0.247059, 0.145098, 0.12549, 1 ), Color( 0.247059, 0.145098, 0.12549, 1 ), Color( 0.247059, 0.145098, 0.12549, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WaveText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 48
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=16]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=17]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="Gradient" id=19]
offsets = PoolRealArray( 0, 0.899441, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="CanShootArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanShootArea"]
position = Vector2( 960, 539.5 )
shape = SubResource( 1 )

[node name="Ground" type="Sprite" parent="."]
modulate = Color( 0.839216, 0.956863, 0.952941, 1 )
position = Vector2( 960, 540 )
scale = Vector2( 1920, 1080 )
texture = ExtResource( 5 )

[node name="YSort" type="YSort" parent="."]

[node name="Fire" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 960, 540 )

[node name="Shield" parent="YSort" instance=ExtResource( 2 )]
visible = false
position = Vector2( -960, -540 )

[node name="Snowman" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 244, 572 )
tutorial_snowman = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 958, 542 )
texture = ExtResource( 4 )
texture_scale = 2.0
color = Color( 0.909804, 0.333333, 0.054902, 1 )
energy = 0.6

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.917647, 0.917647, 0.917647, 1 )

[node name="Target" type="Sprite" parent="."]
visible = false
scale = Vector2( 7, 7 )
texture = ExtResource( 7 )

[node name="SpawnRect1" type="ReferenceRect" parent="."]
margin_left = -91.0
margin_top = 205.0
margin_right = -67.0
margin_bottom = 554.0

[node name="SpawnRect2" type="ReferenceRect" parent="."]
margin_left = -92.0
margin_top = 563.0
margin_right = -70.0
margin_bottom = 934.0

[node name="SpawnRect3" type="ReferenceRect" parent="."]
margin_left = 222.0
margin_top = 1163.0
margin_right = 1704.0
margin_bottom = 1181.0

[node name="SpawnRect4" type="ReferenceRect" parent="."]
margin_left = 293.0
margin_top = -59.0
margin_right = 1624.0
margin_bottom = -40.0

[node name="WaveSystem" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="TimerBetweenWaves" type="Timer" parent="WaveSystem"]
wait_time = 6.0
one_shot = true

[node name="Shop" parent="." instance=ExtResource( 13 )]
position = Vector2( 1846, 395 )

[node name="BS_price" type="Label" parent="Shop"]
margin_left = -33.0
margin_top = -56.0
margin_right = 13.0
margin_bottom = -18.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "1"
align = 1
valign = 1

[node name="BS_info" type="Label" parent="Shop/BS_price"]
visible = false
margin_left = -274.0
margin_top = -71.0
margin_right = -98.0
margin_bottom = 4.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "Increase bullet
speed"
align = 1
valign = 1

[node name="Cost" type="Label" parent="Shop/BS_price/BS_info"]
margin_top = 61.0
margin_right = 176.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "[Cost: X]"
align = 1
valign = 1

[node name="FR_price" type="Label" parent="Shop"]
margin_left = -32.0
margin_top = 82.0
margin_right = 14.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "1"
align = 1
valign = 1

[node name="FR_info" type="Label" parent="Shop/FR_price"]
visible = false
margin_left = -275.0
margin_top = -69.0
margin_right = -99.0
margin_bottom = 6.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "Increase fire
rate"
align = 1
valign = 1

[node name="Cost" type="Label" parent="Shop/FR_price/FR_info"]
margin_left = -5.0
margin_top = 57.0
margin_right = 171.0
margin_bottom = 132.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "[Cost: X]"
align = 1
valign = 1

[node name="FDS_price" type="Label" parent="Shop"]
margin_left = -33.0
margin_top = 223.0
margin_right = 13.0
margin_bottom = 261.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "1"
align = 1
valign = 1

[node name="FDS_info" type="Label" parent="Shop/FDS_price"]
visible = false
margin_left = -275.0
margin_top = -71.0
margin_right = -99.0
margin_bottom = 4.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "Fire burns
slower"
align = 1
valign = 1

[node name="Cost" type="Label" parent="Shop/FDS_price/FDS_info"]
margin_left = -2.0
margin_top = 58.0
margin_right = 174.0
margin_bottom = 133.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "[Cost: X]"
align = 1
valign = 1

[node name="HP_price" type="Label" parent="Shop"]
margin_left = -33.0
margin_top = 363.0
margin_right = 13.0
margin_bottom = 401.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "1"
align = 1
valign = 1

[node name="HP_info" type="Label" parent="Shop/HP_price"]
visible = false
margin_left = -272.0
margin_top = -70.0
margin_right = -96.0
margin_bottom = 5.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "Heals
the fire"
align = 1
valign = 1

[node name="Cost" type="Label" parent="Shop/HP_price/HP_info"]
margin_left = -2.0
margin_top = 58.0
margin_right = 174.0
margin_bottom = 133.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 7 )
text = "[Cost: X]"
align = 1
valign = 1

[node name="Intro" parent="." instance=ExtResource( 8 )]

[node name="Camera2D" type="Camera2D" parent="Intro"]
position = Vector2( 959, 404 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Debug" type="Label" parent="."]
margin_left = 2.0
margin_top = 787.0
margin_right = 361.0
margin_bottom = 937.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 9 )
text = "Bullet speed: X
Time between shots: X
Fire decrease speed: X"
align = 2

[node name="CanvasLayer" type="Node2D" parent="."]

[node name="FireMeter" parent="CanvasLayer" instance=ExtResource( 3 )]
margin_left = 1509.0
margin_top = 1007.0
margin_right = 2909.0
margin_bottom = 1110.0

[node name="FireMeterArea2D" type="Area2D" parent="CanvasLayer"]
position = Vector2( 316, 887 )
rotation = -3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/FireMeterArea2D"]
position = Vector2( -292, -187.5 )
shape = SubResource( 8 )

[node name="WaveText" type="RichTextLabel" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
margin_left = 838.0
margin_top = 146.0
margin_right = 1054.0
margin_bottom = 319.0
mouse_filter = 2
custom_colors/default_color = Color( 0.247059, 0.145098, 0.12549, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]I[/center]"
text = "I"
scroll_active = false

[node name="CoinsText" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 122.0
margin_top = 15.0
margin_right = 588.0
margin_bottom = 84.0
custom_colors/default_color = Color( 0.247059, 0.145098, 0.12549, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "1"
scroll_active = false

[node name="CoinIcon" type="Sprite" parent="CanvasLayer"]
position = Vector2( 67, 49 )
scale = Vector2( 7, 7 )
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/RESET = SubResource( 3 )
anims/show_wave = SubResource( 5 )

[node name="Tutorial" type="Node2D" parent="."]
visible = false
script = ExtResource( 16 )

[node name="MouseLeft" type="Sprite" parent="Tutorial"]
position = Vector2( 628, 264 )
scale = Vector2( 7, 7 )
texture = ExtResource( 15 )

[node name="Text" type="Label" parent="Tutorial"]
margin_left = 447.0
margin_top = 383.0
margin_right = 806.0
margin_bottom = 727.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 9 )
text = "Drag AND Drop 
items to fire

or

Click on snowman
to make him
a prior target"
align = 1
valign = 1

[node name="MouseRight" type="Sprite" parent="Tutorial"]
position = Vector2( 1278, 271 )
scale = Vector2( 7, 7 )
texture = ExtResource( 14 )

[node name="Text2" type="Label" parent="Tutorial"]
margin_left = 1099.0
margin_top = 381.0
margin_right = 1458.0
margin_bottom = 531.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 9 )
text = "Use shield to
block snowmans
bullets"
align = 1
valign = 1

[node name="Text3" type="Label" parent="Tutorial"]
visible = false
margin_left = -38.0
margin_top = 516.0
margin_right = 321.0
margin_bottom = 666.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 9 )
text = "Item ->"
align = 1
valign = 1

[node name="CoinsText" type="Label" parent="Tutorial"]
margin_left = 72.0
margin_top = -36.0
margin_right = 431.0
margin_bottom = 114.0
rect_rotation = 10.7581
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 10 )
text = "<- Coins"
align = 1
valign = 1

[node name="BuyUpgrades" type="Label" parent="Tutorial"]
margin_left = 1424.0
margin_top = 91.0
margin_right = 1783.0
margin_bottom = 241.0
rect_rotation = 7.70805
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 9 )
text = "You can buy upgrades HERE ->"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tutorial"]
root_node = NodePath("../..")

[node name="GameOver" type="Node2D" parent="."]
visible = false

[node name="Text" type="Label" parent="GameOver"]
margin_left = 778.0
margin_top = 162.0
margin_right = 1137.0
margin_bottom = 506.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 11 )
text = "Game over!

Wave: X"
align = 1
valign = 1

[node name="Text2" type="Label" parent="GameOver"]
margin_left = 446.0
margin_top = 467.0
margin_right = 878.0
margin_bottom = 811.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 12 )
text = "Press R! to Restart..."
align = 1
valign = 1

[node name="Settings" type="Node2D" parent="."]
pause_mode = 2
visible = false
script = ExtResource( 22 )

[node name="SettingsButton" type="TextureButton" parent="Settings"]
margin_left = 1771.0
margin_top = 922.0
margin_right = 1888.0
margin_bottom = 1039.0
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true

[node name="SETTINGS" type="Node2D" parent="Settings"]
visible = false

[node name="SettingsFrame" type="Sprite" parent="Settings/SETTINGS"]
position = Vector2( 960, 500 )
scale = Vector2( 7, 7 )
texture = ExtResource( 19 )

[node name="TextSettings" type="Label" parent="Settings/SETTINGS"]
margin_left = 781.0
margin_top = 290.0
margin_right = 1140.0
margin_bottom = 440.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 13 )
text = "SETTINGS"
align = 1
valign = 1

[node name="ProMode" type="CheckBox" parent="Settings/SETTINGS"]
margin_left = 826.0
margin_top = 423.0
margin_right = 1097.0
margin_bottom = 476.0
theme = ExtResource( 20 )
custom_colors/font_color = Color( 0.901961, 0.917647, 0.898039, 1 )
custom_fonts/font = SubResource( 14 )
text = "Show key bindings"
flat = true

[node name="Fullscreen" type="CheckBox" parent="Settings/SETTINGS"]
margin_left = 861.0
margin_top = 488.0
margin_right = 1059.0
margin_bottom = 562.0
theme = ExtResource( 20 )
custom_colors/font_color = Color( 0.901961, 0.917647, 0.898039, 1 )
custom_fonts/font = SubResource( 14 )
text = "Fullscreen"
flat = true

[node name="Debug" type="CheckBox" parent="Settings/SETTINGS"]
margin_left = 868.0
margin_top = 578.0
margin_right = 1053.0
margin_bottom = 643.0
theme = ExtResource( 20 )
custom_colors/font_color = Color( 0.901961, 0.917647, 0.898039, 1 )
custom_fonts/font = SubResource( 14 )
text = "Show stats"
flat = true

[node name="BackButton" type="Button" parent="Settings/SETTINGS"]
margin_left = 888.0
margin_top = 676.0
margin_right = 1030.0
margin_bottom = 745.0
theme = ExtResource( 24 )
icon_align = 1

[node name="TextVolume" type="Label" parent="Settings/SETTINGS/BackButton"]
margin_left = 1.0
margin_top = -2.0
margin_right = 141.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 16 )
text = "Back"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 1824.0
margin_top = 12.0
margin_right = 1905.0
margin_bottom = 98.0
theme = ExtResource( 24 )
icon = ExtResource( 23 )
flat = true
icon_align = 1
expand_icon = true

[node name="Keybindings" type="Node2D" parent="."]

[node name="Keybindings2" type="Sprite" parent="Keybindings"]
position = Vector2( 1822, 465 )
scale = Vector2( 7, 7 )
texture = ExtResource( 25 )

[node name="Keys" type="Label" parent="Keybindings"]
margin_left = 1712.0
margin_top = 273.0
margin_right = 1766.0
margin_bottom = 345.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 17 )
text = "Q"
align = 2

[node name="Keys2" type="Label" parent="Keybindings"]
margin_left = 1716.0
margin_top = 413.0
margin_right = 1770.0
margin_bottom = 485.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 17 )
text = "W"
align = 2

[node name="Keys3" type="Label" parent="Keybindings"]
margin_left = 1712.0
margin_top = 554.0
margin_right = 1766.0
margin_bottom = 626.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 17 )
text = "E"
align = 2

[node name="Keys4" type="Label" parent="Keybindings"]
margin_left = 1715.0
margin_top = 693.0
margin_right = 1769.0
margin_bottom = 765.0
custom_colors/font_color = Color( 0.184314, 0.129412, 0.121569, 1 )
custom_fonts/font = SubResource( 17 )
text = "R"
align = 2

[node name="SnowParticles" type="CPUParticles2D" parent="."]
position = Vector2( 970, -99 )
amount = 1000
lifetime = 5.0
speed_scale = 1.25
texture = ExtResource( 26 )
emission_shape = 2
emission_rect_extents = Vector2( 1000, 1 )
scale_amount_random = 1.0
color_ramp = SubResource( 19 )

[connection signal="body_entered" from="CanShootArea" to="." method="_on_CanShootArea_body_entered"]
[connection signal="timeout" from="WaveSystem/TimerBetweenWaves" to="WaveSystem" method="_on_TimerBetweenWaves_timeout"]
[connection signal="mouse_entered" from="Shop/BulletSpeed" to="." method="_on_BulletSpeed_mouse_entered"]
[connection signal="mouse_exited" from="Shop/BulletSpeed" to="." method="_on_BulletSpeed_mouse_exited"]
[connection signal="pressed" from="Shop/BulletSpeed" to="." method="_on_BulletSpeed_pressed"]
[connection signal="mouse_entered" from="Shop/FireRate" to="." method="_on_FireRate_mouse_entered"]
[connection signal="mouse_exited" from="Shop/FireRate" to="." method="_on_FireRate_mouse_exited"]
[connection signal="pressed" from="Shop/FireRate" to="." method="_on_FireRate_pressed"]
[connection signal="mouse_entered" from="Shop/FireDecreaseSpeed" to="." method="_on_FireDecreaseSpeed_mouse_entered"]
[connection signal="mouse_exited" from="Shop/FireDecreaseSpeed" to="." method="_on_FireDecreaseSpeed_mouse_exited"]
[connection signal="pressed" from="Shop/FireDecreaseSpeed" to="." method="_on_FireDecreaseSpeed_pressed"]
[connection signal="mouse_entered" from="Shop/FireHp" to="." method="_on_FireHp_mouse_entered"]
[connection signal="mouse_exited" from="Shop/FireHp" to="." method="_on_FireHp_mouse_exited"]
[connection signal="pressed" from="Shop/FireHp" to="." method="_on_FireHp_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/FireMeterArea2D" to="CanvasLayer/FireMeter" method="_on_Area2D_mouse_entered"]
[connection signal="pressed" from="Settings/SettingsButton" to="Settings" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Settings/SETTINGS/ProMode" to="Settings" method="_on_ProMode_pressed"]
[connection signal="pressed" from="Settings/SETTINGS/Fullscreen" to="Settings" method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Settings/SETTINGS/Debug" to="Settings" method="_on_Debug_pressed"]
[connection signal="pressed" from="Settings/SETTINGS/BackButton" to="Settings" method="_on_BackButton_pressed"]
[connection signal="pressed" from="Button" to="Settings" method="_on_Button_pressed"]

[editable path="Shop"]
